Now Octopress Ink plugin includes can access the plugin confugration at {{ plugin.whatever }}

--- a/test/_expected/ink-includes.html
+++ b/test/_expected/ink-includes.html
@@ -9,3 +9,6 @@ Yo Dawg, I heard you like includes. → Yo Dawg, I heard you like includes.
 
 ## Override plugin include
 Overrides plugin include → Overrides plugin include
+
+## Plugin config access
+Config for test is: howdy y'all
