--- a/test/ink-includes.html
+++ b/test/ink-includes.html
@@ -11,3 +11,6 @@ Yo Dawg, I heard you like includes. → {% include test-plugin:greet.html greeti
 
 ## Override plugin include
 Overrides plugin include → {% include test-plugin:bar.html %}
+
+## Plugin config access
+{% include test-plugin:config.html %}
