Fixed issues with Liquid 3 Now also supporting Jekyl 2 and 3

--- a/test/_expected/includes.html
+++ b/test/_expected/includes.html
@@ -5,6 +5,7 @@ Testing Include → Testing Include
 
 ## Include from var
 Testing Include → Testing Include
+Testing Include → Testing Include
 
 ## Local var passing
 Testing Include var_test → Testing Include var_test
