Fix for multiple parameters. Closes #2

--- a/test/_expected/includes.html
+++ b/test/_expected/includes.html
@@ -9,6 +9,7 @@ Testing Include → Testing Include
 
 ## Local var passing
 Testing Include var_test → Testing Include var_test
+Testing Include var_test - another var! → Testing Include var_test - another var!
 
 ## Filter testing
 TESTING INCLUDE → TESTING INCLUDE
